--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/Okoliko1/Bike_sharing_project/blob/main/SQLQuery_bikeshare_cyclistic.sql">Cyclistic Bike Sharing Analysis<br />
 									</a></h2>
-									<p>In this project i merged, cleaned and transformed a bike-sharing data in SQL server making it better for analysis.
+									<p>In this project of a bike sharing company, i merged, cleaned, transformed and conducted a comprehensive examination of usage patterns, customer behavior, and operational efficiency by leveraging a dataset encompassing ride details, user information, and environmental factors, the analysis aimed to optimize bike distribution, identify peak usage times, and enhance overall service quality. Through data visualization and statistical modeling, I uncovered insights into rider preferences and seasonal variations.
 								<a href="https://github.com/Okoliko1/Bike_sharing_project/blob/main/SQLQuery_bikeshare_cyclistic.sql" class="image main"><img src="images/bike sharing.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/Okoliko1/Bike_sharing_project/blob/main/SQLQuery_bikeshare_cyclistic.sql" class="button large">View Project</a></li>
@@ -86,51 +86,17 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="https://github.com/Okoliko1/COVID_PortfolioProject/blob/main/COVID%20PortfolioSQL_2.sql">Data Exploration for covid 19<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/Okoliko1/COVID_PortfolioProject/blob/main/COVID%20PortfolioSQL_2.sql" class="image fit"><img src="images/covid.jpg" alt="" /></a>
+									<p>"In this  COVID-19 data analysis project, I delved into the impact of the pandemic by examining key trends and statistics. Utilizing the global covid 19 dataset, I explored the spread of the virus, identified high-risk regions, and analyzed the class of population with the highest infection rates. </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/Okoliko1/COVID_PortfolioProject/blob/main/COVID%20PortfolioSQL_2.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									
 								</article>
 							</section>
 
@@ -144,21 +110,6 @@
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
 							</form>
 						</section>
 						<section class="split contact">
@@ -187,7 +138,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Timothy okoliko</li><li>Design: <a href="https://html5up.net">Timothy Okoliko</a></li></ul>
 					</div>
 
 			</div>
